fix issue with service name not wrapping properly

--- a/src/app/company/components/service-list-card/service-list-card.component.scss
+++ b/src/app/company/components/service-list-card/service-list-card.component.scss
@@ -1,15 +1,9 @@
 :host {
   display: flex;
-  border-bottom: 1px solid #A1A1A1;
-  margin-bottom: 15px;
-  margin-right: 20px;
-  white-space: nowrap;
-}
-
-.card-title-container {
   text-transform: capitalize;
-  overflow-x: hidden;
+  justify-content: space-between;
   width: 100%;
+  border-bottom: 1px solid #A1A1A1;
 }
 
 p, h6 {
